@@ -21,6 +21,7 @@ search -exec
 overlap tool
 facetize improvements
 
+* added -exec option to MGED's search command - Peter Pronai
 * added new MGED 'lint' command for finding bad geometry - Cliff Yapp
 * improved lingering framebuffer CPU utilization  - Sean Morrison
 * updated 'draw -S' option to work with shaded objects - Bob Parker
